--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,4 @@
+/node_modules
 # more info here - http://eslint.org/docs/user-guide/configuring.html#ignoring-files-and-directories
 
 # node_modules ignored by default
